change html css

--- a/index.html
+++ b/index.html
@@ -27,15 +27,20 @@
                 </ul>
             </nav>
         </div>
-        <div>
+        <div class="right-menu">
             <p>Повна версія</p>
-            <div>
-
+            <div class="menu-btn">
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
     </header>
     <main>
         <div class="left">
+            <iframe src="https://kostianm.github.io/borshcz/" >
+                
+            </iframe>
             <div>
                 <h2><a href="#">Загальні бойові втрати РФ від початку війни - близько 210 350 осіб (+410 за добу), 3848
                         танків, 3567 артсистем, 7523
